syntax = "proto3";

option go_package = "epistemic-me-core/pb/models";

import "proto/models/source.proto";

// Possible state in an observation context
message State {
    string id = 1;
    string name = 2;
    string description = 3;
    map<string, float> properties = 4;  // Measurable properties of this state
}

// ObservationContext represents a context in which states can be observed
message ObservationContext {
    string id = 1;
    string name = 2;
    string parent_id = 3;
    string description = 4;
    
    // States that can be observed in this context
    repeated State possible_states = 5;
    
    // Current state
    string current_state_id = 6;
    int64 last_updated = 7;
    
    // Sources of evidence for this context
    repeated Source sources = 8;
}
